k8s/Rooms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rooms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rooms
  template:
    metadata:
      labels:
        app: rooms
    spec:
      containers:
        - image: decel337/rooms #docker build ... -> build project and push on docker hub, after he download.
          imagePullPolicy: Never #Set 'never', because Docker Hub restricted access from Donetsk region, and
            #i'm download image by hand. You can leave 'Always' if don't have problems.
          name: rooms
          ports:
            - containerPort: 8080
