k8s/Rooms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rooms-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rooms
