k8s/Rooms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rooms-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/rooms
            pathType: "Prefix"
            backend:
              service:
                name: rooms-service
                port:
                  number: 80
